--- a/package.json
+++ b/package.json
@@ -2,15 +2,20 @@
       "name": "project",
       "version": "1.0.0",
       "license": "proprietary",
+      "main": "dist/App/app.js",
+      "bin": {
+            "fleet": "./dist/cli.js"
+      },
       "devDependencies": {
             "@cucumber/cucumber": "^8.3.0",
+            "@cucumber/pretty-formatter": "^1.0.1",
             "@types/cucumber": "^6.0.1",
             "@types/node": "^14.0.27",
             "ts-node": "^10.9.2",
-            "typescript": "^4.5.4",
-            "@cucumber/pretty-formatter": "^1.0.1"
+            "typescript": "^4.5.4"
       },
       "scripts": {
-            "test": "cucumber-js --profile default"
+            "test": "cucumber-js --profile default",
+            "build": "tsc"
       }
 }
