added pg and pg types

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
             "build": "tsc"
       },
       "dependencies": {
+            "@types/pg": "^8.11.10",
             "pg": "^8.13.1"
       }
 }
